# INFO-F209

./: .gitignore  CMakeLists.txt  QuoridorServer  README.md  build_client.sh  build_server.sh  compileFiles.sh  conanfile.txt  example.db  rapport.tex
src/: CMakeLists.txt  Readme.md  crow_all.h  main.cpp
src/client-side/: controllers.h
src/client-side/views/: account_deletion_view.h  auto_refreshing_view.h  disconnect_menu_view.h  friend_list_view.h  game_configurator_menu_view.h  main_menu_view.h  quoridor_main_menu.h  saved_game_joiner.h
src/client_side/: Answer.cpp  Answer.h  CMakeLists.txt  ClientSide  Controller.cpp  Controller.h  HelpMenuView.cpp  HelpMenuView.h  MainMenu.cpp  MainMenu.hpp  MainMenuController.h  MainMenuView.cpp  MainMenuView.h  MenuView.cpp  MenuView.h  RankingMenuView.cpp  abstract_controller.cpp  abstract_controller.h  answer.cpp  answer.h  client_login_controller.cpp  client_login_controller.h  client_login_model.cpp  client_login_model.hpp  client_main_controller.cpp  client_main_controller.h  client_mvc_factory.cpp  client_mvc_factory.h  controller.cpp  controller.h  curse.cpp  enum_factory.h  login.cpp  login.hpp  login_view.cpp  login_view.h  main  main.cpp  main_menu.cpp  main_menu.hpp  (+3 more)
src/client_side/QtCode/: CMakeLists.txt  Test.pro  Test.pro.user.490da37  Test.pro.user.87a6823  board_scene.cpp  board_scene.h  canvas.cpp  canvas.h  game.cpp  game.h  main.cpp  mainmenuview.cpp  mainmenuview.h  mainmenuview.ui  mainmenuview.ui.autosave  message_fetcher.cpp  message_fetcher.h  ressource.qrc
src/client_side/QtCode/game/: CMakeLists.txt  assets.cpp  assets.h  board_fetcher.cpp  board_fetcher.h  menu_board_scene.cpp  menu_board_scene.h  menu_board_view.cpp  menu_board_view.h  menu_cell.cpp  menu_cell.h  menu_wall_cell.cpp  menu_wall_cell.h
src/client_side/build-QtCode-Desktop-Debug/: build.ninja  qtcsettings.cmake
src/client_side/build-QtCode-Desktop-Debug/.qtc_clangd/: compile_commands.json
src/client_side/build-Test-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .qmake.stash  moc_mainmenuview.cpp  qrc_ressource.cpp  ui_mainmenuview.h
src/client_side/build-Test-Qt_6_2_3_for_macOS-Debug/: moc_mainmenuview.cpp  qrc_ressource.cpp  ui_mainmenuview.h
src/client_side/models/: CMakeLists.txt  api_wrapper.cpp  api_wrapper.h  ranking.cpp  ranking.h  requests.cpp  requests.h  user_client.cpp  user_client.h
src/client_side/view/: HelpMenuView.cpp  MainMenuView.cpp  MainMenuView.h  MenuView.h  SelectionMenuView.cpp  SelectionMenuView.h
src/client_side/view_controllers/: abstract_authed_menu_view_controller.cpp  abstract_authed_menu_view_controller.h  abstract_list_menu_view_controller.cpp  abstract_list_menu_view_controller.h  abstract_menu_view_controller.cpp  abstract_menu_view_controller.h  abstract_searchable_list_menu_view_controller.cpp  abstract_searchable_list_menu_view_controller.h  abstract_view_controller.cpp  abstract_view_controller.h  chat_room_view_controller.cpp  chat_room_view_controller.h  create_account_view_controller.cpp  create_account_view_controller.h  find_friend_view_controller.cpp  find_friend_view_controller.h  friend_list_view_controller.cpp  friend_list_view_controller.h  game_mode_selection_menu_view_controller.cpp  game_mode_selection_menu_view_controller.h  game_view_controller.cpp  game_view_controller.h  help_view_controller.cpp  help_view_controller.h  home_menu_view_controller.cpp  home_menu_view_controller.h  join_game_menu_view_controller.cpp  join_game_menu_view_controller.h  join_or_create_game_menu_view_controller.cpp  join_or_create_game_menu_view_controller.h  login_view_controller.cpp  login_view_controller.h  menu_view_controller.cpp  menu_view_controller.h  new_game_menu_view_controller.cpp  new_game_menu_view_controller.h  ranking_view_controller.cpp  ranking_view_controller.h  selection_menu_view_controller.cpp  selection_menu_view_controller.h  (+38 more)
src/client_side/views/: main_menu.cpp
src/client_side/views/menu_views/: abstract_menu_view.cpp  abstract_menu_view.h  chat_room_menu_view.cpp  chat_room_menu_view.h  create_account_menu_view.cpp  create_account_menu_view.h  find_new_friend_menu_view.cpp  find_new_friend_menu_view.h  friend_list_menu_view.cpp  friend_list_menu_view.h  game_mode_selection_menu_view.cpp  game_mode_selection_menu_view.h  game_view.cpp  game_view.h  help_menu_view.cpp  help_menu_view.h  home_menu_view.cpp  home_menu_view.h  join_game_menu_view.cpp  join_game_menu_view.h  join_or_create_game_menu_view.cpp  join_or_create_game_menu_view.h  login_menu_view.cpp  login_menu_view.h  new_game_menu_view.cpp  new_game_menu_view.h  ranking_menu_view.cpp  ranking_menu_view.h  selection_menu_view.cpp  selection_menu_view.h  start_menu_view.cpp  start_menu_view.h
src/client_side/views/view_elements/: button.cpp  button.h
src/client_side/views/views/: main_menu.cpp  main_menu.hpp
src/common/: base64.h  constants.h  utils.h
src/common/game_logic/: board.h  board_position.h  constants.h  game.h  game_mode.h  piece.h  player.h
src/common/models/: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  board.cpp  board.h  cell.cpp  cell.h  common.h  database.cpp  database.h  database_compatible.h  ia.cpp  ia.h  position.cpp  position.h  serializable.h  translator.cpp  translator.h  user_server.cpp  user_server.h
src/includes/: crow_all.hpp
src/server-side/game_logic/: action.h  board.h  board_position.h  game.h  piece.h  player.h
src/server-side/platform/: abstract_validator.h  score.h  user.h  username.h
src/server_side/: CMakeLists.txt  example.db  main.cpp  makefile  utils.h
src/server_side/models/: CMakeLists.txt  Game.cpp  Game.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  board  board.cpp  board.h  cell.cpp  cell.h  common.h  const.h  database.cpp  database.h  database_compatible.h  ia.cpp  ia.h  input.cpp  input.h  position.cpp  position.h  serializable.h  server_side_user.cpp  server_side_user.h  translator.cpp  translator.h  user_server.cpp  user_server.h  wall.cpp  wall.h
src/server_side/view_controllers/: CMakeLists.txt
src/server_side/views/: views.cpp  views.h
(+2428 files in other folders)
